--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
     </header>
 
     <main class="main-catalog main-container">
-      <header class="header-catalog">
+      <header class="header-catalog page-container">
         <h1 class="catalog-title raleway-title">Моноподы для селфи</h1>
 
         <ul class="breadcrumbs reset-list">
@@ -109,106 +109,105 @@
             <a class="breadcrumbs-link" href="#">Каталог товаров</a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="#">Моноподы для селфи</a>
+            <a class="breadcrumbs-link">Моноподы для селфи</a>
           </li>
         </ul>
       </header>
 
-      <section class="catalog-filter">
-        <h2 class="filter-title">Фильтр:</h2>
-
-        <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
-          <fieldset class="filter-form-group">
-            <legend class="filter-form-title">Стоимость</legend>
-            <div class="cost">
-              <div class="cost-scale">
-                <button class="cost-scale-pin pin-min" type="button">
-                  <span class="visually-hidden">Изменение минимальной цены</span>
-                </button>
-                <div class="cost-scale-level" style="left: 10px; width: 75%;"></div>
-                <button class="cost-scale-pin pin-max" type="button">
-                  <span class="visually-hidden">Изменение максимальной цены</span>
-                </button>
-              </div>
-              <div class="cost-control">
-                <label class="cost-item">
-                  <span class="cost-label">от</span>
-                  <input class="cost-input" type="number" name="min-price" value="0">
-                </label>
-                <label class="cost-item">
-                  <span class="cost-label">до</span>
-                  <input class="cost-input" type="number" name="max-price" value="5000">
-                </label>
-              </div>
-            </div>
-          </fieldset>
-
-          <fieldset class="filter-form-group">
-            <legend class="filter-form-title">Цвет</legend>
-            <ul class="filter-form-list reset-list">
-              <li class="filter-form-item">
-                <label class="filter-form-label">
-                  <input class="filter-form-checkbox" type="checkbox" name="black" checked>
-                  <span class="control-checkbox"></span>
-                  Черный
-                </label>
-              </li>
-              <li class="filter-form-item">
-                <label class="filter-form-label">
-                  <input class="filter-form-checkbox" type="checkbox" name="white" checked>
-                  <span class="control-checkbox"></span>
-                  Белый
-                </label>
-              </li>
-              <li class="filter-form-item">
-                <label class="filter-form-label">
-                  <input class="filter-form-checkbox" type="checkbox" name="blue">
-                  <span class="control-checkbox"></span>
-                  Синий
-                </label>
-              </li>
-              <li class="filter-form-item">
-                <label class="filter-form-label">
-                  <input class="filter-form-checkbox" type="checkbox" name="red">
-                  <span class="control-checkbox"></span>
-                  Красный
-                </label>
-              </li>
-              <li class="filter-form-item">
-                <label class="filter-form-label">
-                  <input class="filter-form-checkbox" type="checkbox" name="pink">
-                  <span class="control-checkbox"></span>
-                  Розовый
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-
-          <fieldset class="filter-form-group">
-            <legend class="filter-form-title">Bluetooth</legend>
-            <ul class="filter-form-list reset-list">
-              <li class="filter-form-item">
-                <label class="filter-form-label">
-                  <input class="filter-form-radio" type="radio" name="bluetooth" value="yes">
-                  <span class="control-radio"></span>
-                  Есть
-                </label>
-              </li>
-              <li class="filter-form-item">
-                <label class="filter-form-label">
-                  <input class="filter-form-radio" type="radio" name="bluetooth" value="no">
-                  <span class="control-radio"></span>
-                  Нет
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-
-          <button class="button filter-form-group" type="submit">Показать</button>
-        </form>
-      </section>
-
       <div class="catalog-container">
+        <section class="catalog-filter">
+          <h2 class="filter-title">Фильтр:</h2>
+
+          <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
+            <fieldset class="filter-form-group">
+              <legend class="filter-form-title">Стоимость</legend>
+              <div class="cost">
+                <div class="cost-scale">
+                  <button class="cost-scale-pin pin-min" type="button">
+                    <span class="visually-hidden">Изменение минимальной цены</span>
+                  </button>
+                  <div class="cost-scale-level" style="left: 0; width: 55%;"></div>
+                  <button class="cost-scale-pin pin-max" type="button">
+                    <span class="visually-hidden">Изменение максимальной цены</span>
+                  </button>
+                </div>
+                <div class="cost-control">
+                  <label class="cost-item">
+                    <span class="cost-label">от</span>
+                    <input class="cost-input" type="number" name="min-price" value="0">
+                  </label>
+                  <label class="cost-item">
+                    <span class="cost-label">до</span>
+                    <input class="cost-input" type="number" name="max-price" value="5000">
+                  </label>
+                </div>
+              </div>
+            </fieldset>
+
+            <fieldset class="filter-form-group">
+              <legend class="filter-form-title">Цвет</legend>
+              <ul class="filter-form-list reset-list">
+                <li class="filter-form-item">
+                  <label class="filter-form-label">
+                    <input class="filter-form-checkbox visually-hidden" type="checkbox" name="black" checked>
+                    <span class="control-checkbox"></span>
+                    Черный
+                  </label>
+                </li>
+                <li class="filter-form-item">
+                  <label class="filter-form-label">
+                    <input class="filter-form-checkbox visually-hidden" type="checkbox" name="white" checked>
+                    <span class="control-checkbox"></span>
+                    Белый
+                  </label>
+                </li>
+                <li class="filter-form-item">
+                  <label class="filter-form-label">
+                    <input class="filter-form-checkbox visually-hidden" type="checkbox" name="blue">
+                    <span class="control-checkbox"></span>
+                    Синий
+                  </label>
+                </li>
+                <li class="filter-form-item">
+                  <label class="filter-form-label">
+                    <input class="filter-form-checkbox visually-hidden" type="checkbox" name="red">
+                    <span class="control-checkbox"></span>
+                    Красный
+                  </label>
+                </li>
+                <li class="filter-form-item">
+                  <label class="filter-form-label">
+                    <input class="filter-form-checkbox visually-hidden" type="checkbox" name="pink">
+                    <span class="control-checkbox"></span>
+                    Розовый
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+
+            <fieldset class="filter-form-group">
+              <legend class="filter-form-title">Bluetooth</legend>
+              <ul class="filter-form-list reset-list">
+                <li class="filter-form-item">
+                  <label class="filter-form-label">
+                    <input class="filter-form-radio visually-hidden" type="radio" name="bluetooth" value="yes">
+                    <span class="control-radio"></span>
+                    Есть
+                  </label>
+                </li>
+                <li class="filter-form-item">
+                  <label class="filter-form-label">
+                    <input class="filter-form-radio visually-hidden" type="radio" name="bluetooth" value="no">
+                    <span class="control-radio"></span>
+                    Нет
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+
+            <button class="button filter-form-button" type="submit">Показать</button>
+          </form>
+        </section>
 
         <section class="sort">
           <h2 class="sort-title">Сортировка:</h2>
@@ -223,12 +222,12 @@
 
           <ul class="sort-list reset-list">
             <li class="sort-item">
-              <button class="sort-button">
+              <button class="sort-button sort-button-top">
                 <span class="visually-hidden">По возрастанию</span>
               </button>
             </li>
             <li class="sort-item">
-              <button class="sort-button">
+              <button class="sort-button sort-button-bottom">
                 <span class="visually-hidden">По убыванию</span>
               </button>
             </li>
@@ -240,30 +239,38 @@
           <ul class="catalog-list reset-list">
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="images/product/product-1.jpg" width="360" height="380" alt="Селфи-палка любительского уровня.">
-                <h3 class="catalog-item-title">Любительская селфи-палка</h3>
-                <p class="catalog-item-cost">500 ₽</p>
+                <img class="catalog-item-image image-style" src="images/product/product-1.jpg" width="360" height="380" alt="Селфи-палка любительского уровня.">
+                <div class="catalog-item-description">
+                  <h3 class="catalog-item-title">Любительская<br> селфи-палка</h3>
+                  <p class="catalog-item-cost">500 ₽</p>
+                </div>
               </a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="images/product/product-2.jpg" width="360" height="380" alt="Селфи-палка профессионального уровня.">
-                <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
-                <p class="catalog-item-cost">1 500 ₽</p>
+                <img class="catalog-item-image image-style" src="images/product/product-2.jpg" width="360" height="380" alt="Селфи-палка профессионального уровня.">
+                <div class="catalog-item-description">
+                  <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
+                  <p class="catalog-item-cost">1 500 ₽</p>
+                </div>
               </a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="images/product/product-3.jpg" width="360" height="380" alt="Селфи-палка для водных приключений.">
-                <h3 class="catalog-item-title">Непотопляемая селфи-палка</h3>
-                <p class="catalog-item-cost">2 500 ₽</p>
+                <img class="catalog-item-image image-style" src="images/product/product-3.jpg" width="360" height="380" alt="Селфи-палка для водных приключений.">
+                <div class="catalog-item-description">
+                  <h3 class="catalog-item-title">Непотопляемая<br> селфи-палка</h3>
+                  <p class="catalog-item-cost">2 500 ₽</p>
+                </div>
               </a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
-                <img class="catalog-item-image" src="images/product/product-4.jpg" width="360" height="380" alt="Селфи-палка с рукой для оригинальных фото.">
-                <h3 class="catalog-item-title">Селфи-палка «Следуй за мной»</h3>
-                <p class="catalog-item-cost">1 500 ₽</p>
+                <img class="catalog-item-image image-style" src="images/product/product-4.jpg" width="360" height="380" alt="Селфи-палка с рукой для оригинальных фото.">
+                <div class="catalog-item-description">
+                  <h3 class="catalog-item-title">Селфи-палка «Следуй<br> за мной»</h3>
+                  <p class="catalog-item-cost">1 500 ₽</p>
+                </div>
               </a>
             </li>
           </ul>
