--- a/catalog.html
+++ b/catalog.html
@@ -445,7 +445,7 @@
                       <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/>
                     </svg>
                   </button>
-                  <span class="modal-tooltip-text" id="modal-tooltip-label" role="tooltip"></span>
+                  <span class="modal-tooltip-text" id="modal-tooltip-label" role="tooltip">Постараемся найти, сколько нужно. Привезём сколько получится по требованиям к&nbsp;провозу багажа.</span>
                 </span>
 
                 <input class="order-form-input input-quantity" id="input-quantity" type="number" name="order-form-quantity" value="1">
